deps/lld/test/darwin/cmdline-objc_gc.objtxt
# RUN: not lld -flavor darwin -arch x86_64 -objc_gc %s 2>&1 | FileCheck %s
#
# Test that the -objc_gc is rejected.
#

# CHECK: error: -objc_gc is not supported

--- !native
defined-atoms:
    - name:              _main
      type:              code
      scope:             global
      content:           [ 0x90 ]

...
